<resources>
    <string name="app_name">Angular Calculator</string>
    <string name="title_mil2moa">MIL to MOA</string>
    <string name="title_moa2mil">MOA to MIL</string>
    <string name="title_moa2length">MOA to Length</string>
    <string name="title_length2moa">Length to MOA</string>
    <string name="precision">Precision</string>
    <string name="calculate">CALCULATE</string>
    <string name="moa">MOA</string>
    <string name="mil">MIL</string>
    <string name="zero2nine">0–9</string>
    <string name="range">Range</string>
    <string name="distance">Distance</string>
    <string name="convert">Convert</string>
    <string name="yard">Yards</string>
    <string name="feet">Feet</string>
    <string name="meter">Meter</string>
    <string name="inch">Inch</string>
    <string name="cm">Centimeter</string>
    <string name="mm">Milimeter</string>
</resources>
