<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_moa2mil"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:numericShortcut="1"
        android:title="@string/title_moa2mil"
        app:showAsAction="withText" />
    <item
        android:id="@+id/navigation_moa2length"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:numericShortcut="2"
        android:title="@string/title_moa2length"
        app:showAsAction="withText" />
    <item
        android:id="@+id/navigation_length2moa"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:numericShortcut="3"
        android:title="@string/title_length2moa"
        app:showAsAction="withText" />
    <item
        android:id="@+id/navigation_mil2moa"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:numericShortcut="4"
        android:title="@string/title_mil2moa"
        app:showAsAction="withText" />

</menu>
