<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moa2length"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_length2moa"
        android:textSize="30sp"
        android:typeface="normal"
        app:fontFamily="sans-serif-black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/text_range"
        android:layout_width="124dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/range"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/text_convert"
        android:layout_width="124dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="109dp"
        android:text="@string/convert"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_range" />

    <EditText
        android:id="@+id/input_range"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/range"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/text_range"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/input_distance"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/distance"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/text_convert"
        app:layout_constraintTop_toBottomOf="@+id/input_range"
        tools:targetApi="o" />

    <RadioGroup
        android:id="@+id/distance_range"
        android:layout_width="145dp"
        android:layout_height="133dp"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/distance_yard"
        app:layout_constraintStart_toEndOf="@+id/input_range"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <RadioButton
            android:id="@+id/distance_yard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yard" />

        <RadioButton
            android:id="@+id/distance_feet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feet" />

        <RadioButton
            android:id="@+id/distance_meter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/meter" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/distance_distance"
        android:layout_width="145dp"
        android:layout_height="133dp"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/distance_inch"
        app:layout_constraintStart_toEndOf="@+id/input_distance"
        app:layout_constraintTop_toBottomOf="@+id/distance_range">

        <RadioButton
            android:id="@+id/distance_inch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inch"
            android:textAllCaps="false" />

        <RadioButton
            android:id="@+id/distance_cm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cm" />

        <RadioButton
            android:id="@+id/distance_mm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mm" />
    </RadioGroup>

    <Button
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>